revtech-luxury/force-app/main/default/objects/CPQ_Log_Event__e/CPQ_Log_Event__e.object-meta.xml
<CustomObject>
    <description>Log envelope published with PublishImmediately so it commits independently of the transaction it describes (design doc S7.2).</description>
    <label>CPQ Log Event</label>
    <pluralLabel>CPQ Log Events</pluralLabel>
</CustomObject>