revtech-luxury/force-app/main/default/objects/CPQ_Log_Event__e/fields/Integration_User__c.field-meta.xml
<CustomField>
    <fullName>Integration_User__c</fullName>
    <label>Integration User</label>
    <length>128</length>
    <type>Text</type>
</CustomField>