revtech-luxury/force-app/main/default/objects/CPQ_Log_Event__e/fields/Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Id__c</fullName>
    <label>Opportunity Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>