revtech-luxury/force-app/main/default/objects/CPQ_Log_Event__e/fields/Violation_Codes__c.field-meta.xml
<CustomField>
    <fullName>Violation_Codes__c</fullName>
    <label>Violation Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>